# bluebox

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  plot.plt  plot.sh  plot_ani.plt
cmake/Modules/: FindSndFile.cmake
inc/: ani.h  ani_decoder.h  ani_encoder.h  common.h  decoder.h  dtmf.h  encoder.h  goertzel.h  main.h
misc/: tonegen.py
misc/s2t/: Makefile
misc/t2s/: Makefile  main.c
src/: ani.c  ani_decoder.c  ani_encoder.c  decoder.c  dtmf.c  encoder.c  goertzel.c  main.c
